--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -55,7 +55,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a th:href="@{index.html}" class="nav-link"><span>Home</span></a></li>
+	          <li class="nav-item"><a th:href="@{index}" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#department-section" class="nav-link"><span>Department</span></a></li>
 	          <li class="nav-item"><a href="#doctor-section" class="nav-link"><span>Doctors</span></a></li>
